--- a/public/index.html
+++ b/public/index.html
@@ -28,19 +28,25 @@
         </tbody>
       </table>
     </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <!-- demo root element -->
+<!--    <div id="demo">-->
+<!--      <form id="search">-->
+<!--        Search <input name="query" v-model="searchQuery" />-->
+<!--      </form>-->
+<!--      <demo-grid-->
+<!--        :heroes="gridData"-->
+<!--        :columns="gridColumns"-->
+<!--        :filter-key="searchQuery"-->
+<!--      >-->
+<!--      </demo-grid>-->
+<!--    </div>-->
     <div id="demo">
-      <form id="search">
-        Search <input name="query" v-model="searchQuery" />
-      </form>
-      <demo-grid
-        :heroes="gridData"
-        :columns="gridColumns"
-        :filter-key="searchQuery"
-      >
-      </demo-grid>
+      <json-viewer :value="oldJson"></json-viewer>
+      <json-viewer :value="newJson"></json-viewer>
     </div>
 
     <script>
@@ -53,7 +59,7 @@
           filterKey: String
         },
         data: function() {
-          var sortOrders = {};
+          const sortOrders = {};
           this.columns.forEach(function(key) {
             sortOrders[key] = 1;
           });
@@ -64,10 +70,10 @@
         },
         computed: {
           filteredHeroes: function() {
-            var sortKey = this.sortKey;
-            var filterKey = this.filterKey && this.filterKey.toLowerCase();
-            var order = this.sortOrders[sortKey] || 1;
-            var heroes = this.heroes;
+            const sortKey = this.sortKey;
+            const filterKey = this.filterKey && this.filterKey.toLowerCase();
+            const order = this.sortOrders[sortKey] || 1;
+            let heroes = this.heroes;
             if (filterKey) {
               heroes = heroes.filter(function(row) {
                 return Object.keys(row).some(function(key) {
